--- a/pkg/strategies/parse_verifier/BUILD
+++ b/pkg/strategies/parse_verifier/BUILD
@@ -39,3 +39,18 @@ go_library(
         "//proto:ebpf_fuzzer_go_proto",
     ],
 )
+
+
+go_test(
+    name = "parseverifier_test",
+    srcs = [
+        "generator_test.go",
+    ],
+    gc_linkopts = [
+        "-linkmode=external",
+        "-extldflags=-static",
+    ],
+    static = "on",
+    embed = [":parseverifier"],
+    importpath = "buzzer/pkg/strategies/stack_corruption",
+)
